--- a/c-ejercicios-algoritmos-arreglos.vcxproj.filters
+++ b/c-ejercicios-algoritmos-arreglos.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main..c">
+    <ClCompile Include="main.c">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
     <ClCompile Include="ex01_suma_elementos_vector.c">
@@ -33,5 +33,17 @@
     <ClCompile Include="ex05_suma_matrices.c">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="ex06_producto_escalar_vectores.c">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="ex07_busqueda_lineal.c">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="ex08_bubble_sort_asc.c">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
   </ItemGroup>
 </Project>
